--- a/lib/telegrator/generators/bot/templates/app/commands/base.rb.tt
+++ b/lib/telegrator/generators/bot/templates/app/commands/base.rb.tt
@@ -15,8 +15,10 @@ module Commands
 
     private
 
+    attr_reader :message, :user
+
     def say(text)
-      send_message(@user.telegram_id, text)
+      send_message(user.telegram_id, text)
     end
 
     def send_message(chat_id, text)
