--- a/lib/telegrator/generators/bot/templates/app/models.rb.tt
+++ b/lib/telegrator/generators/bot/templates/app/models.rb.tt
@@ -1,4 +1,5 @@
 module Models
-  autoload :Base, 'models/base'
-  autoload :User, 'models/user'
 end
+
+require 'models/base'
+require 'models/user'
